--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-<script  src="js/vendor.min.js"></script>
+<!-- <script  src="js/vendor.min.js"></script> -->
 <script src="js/app.js"></script>
 </body>
 </html>
