--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
 <body>
   <div class="header__wrapper header__wrapper--home">
       @@include('./partial/common/header.html')
+      @@include('./partial/main-screen.html')
   </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <!-- <script  src="js/vendor.min.js"></script> -->
 <script src="js/app.js"></script>
 </body>
