--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   </div>
   @@include('./partial/main-screen.html')
   @@include('./partial/expand-presence.html')
+  @@include('./partial/key-features.html')
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
