--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   @@include('./partial/features-steps.html')
   @@include('./partial/showcase.html')
   @@include('./partial/plans.html')
+  @@include('./partial/convert-sites.html')
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
