Styled home page

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,7 @@
 <html lang="ru">
 @@include('partial/common/head.html')
 <body>
-  <div class="header__wrapper header__wrapper--home">
-      @@include('./partial/common/header.html')
-  </div>
+  @@include('./partial/common/main-header.html')
   @@include('./partial/main-screen.html')
   @@include('./partial/expand-presence.html')
   @@include('./partial/key-features.html')
@@ -12,7 +10,8 @@
   @@include('./partial/showcase.html')
   @@include('./partial/plans.html')
   @@include('./partial/convert-sites.html')
-
+  @@include('./partial/contact-form.html')
+  @@include('./partial/common/footer.html')
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
