Styled Gallery section

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include('partial/common/head.html')
+    <head>
+        <title>MyMobileApp</title>
+        <link rel="stylesheet" href="css/app.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,800&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    </head>
 <body>
   @@include('./partial/common/main-header.html')
   @@include('./partial/main-screen.html')
