--- a/src/faq.html
+++ b/src/faq.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include('partial/common/head.html')
+<head>
+    <title>MyMobileApp | FAQ</title>
+    <link rel="stylesheet" href="css/app.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,800&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+</head>
+
 <body>
   @@include('./partial/common/header.html')
   @@include('./partial/faq-form.html')
