--- a/src/about.html
+++ b/src/about.html
@@ -14,8 +14,8 @@
 <body>
   @@include('./partial/common/header.html')
   @@include('./partial/about-main.html')
+  @@include('./partial/choose-us.html')
   @@include('./partial/common/footer.html')
-
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
