Styled Who We Are section

--- a/src/about.html
+++ b/src/about.html
@@ -15,6 +15,7 @@
   @@include('./partial/common/header.html')
   @@include('./partial/about-main.html')
   @@include('./partial/choose-us.html')
+  @@include('./partial/who-we-are.html')
   @@include('./partial/common/footer.html')
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
