--- a/src/about.html
+++ b/src/about.html
@@ -16,11 +16,17 @@
   @@include('./partial/about-main.html')
   @@include('./partial/choose-us.html')
   @@include('./partial/who-we-are.html')
+  @@include('./partial/about-counter.html')
+  @@include('./partial/about-thought.html')
+  @@include('./partial/about-anchor.html')
   @@include('./partial/common/footer.html')
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3561/jquery.magnific-popup.min.js"></script>
+
 <script src="js/aboutScripts.js"></script>
 </body>
 </html>
